link the controller to the database

--- a/module/User/view/user/user/index.phtml
+++ b/module/User/view/user/user/index.phtml
@@ -1,3 +1,8 @@
 <?php echo 'it works perfectly'; ?>
 
 <h2 class="text-capitalize align-text-center">congratulation first page</h2>
+<?php
+
+foreach ($tables as $table) {
+    var_dump($table->artist);
+}
